--- a/index.html
+++ b/index.html
@@ -4,114 +4,243 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+
+    <!-- Підключення шрифтів Google Fonts (Roboto 400, 500, 700) -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- modern-normalize для скидання базових стилів -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+
+    <!-- Підключення власних стилів -->
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+    <!-- Header -->
+    <header class="header">
+      <div class="container header__content">
+        <nav class="nav">
+          <!-- Логотип -->
+          <a href="#" class="nav__logo">WebStudio</a>
+          <!-- Меню -->
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#contacts">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+
+        <!-- Контакти у шапці -->
+        <address class="header__contacts">
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <a class="contacts__link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+      <hr class="header__divider" />
     </header>
 
-    <main>
-      <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-      </section>
+    <!-- Hero -->
+    <section class="hero">
+      <div class="container hero__content">
+        <h1 class="hero__title">Effective Solutions for Your Business</h1>
+        <button class="btn hero__button" type="button">Order Service</button>
+      </div>
+    </section>
 
-      <section class="services">
-        <h2>Our Services</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
+    <!-- Services -->
+    <section class="services" id="studio">
+      <div class="container">
+        <h2 class="section-title services__title">Our Services</h2>
+        <ul class="services__list">
+          <li class="services__item">
+            <h3 class="services__item-title">Strategy</h3>
+            <p class="services__item-text">
+              Our goal is to identify the business problem to walk away with
+              the perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="services__item">
+            <h3 class="services__item-title">Punctuality</h3>
+            <p class="services__item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="services__item">
+            <h3 class="services__item-title">Diligence</h3>
+            <p class="services__item-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="services__item">
+            <h3 class="services__item-title">Technologies</h3>
+            <p class="services__item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
-      </section>
+      </div>
+    </section>
 
-      <section class="team">
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+    <!-- Team -->
+    <section class="team">
+      <div class="container">
+        <h2 class="section-title team__title">Our Team</h2>
+        <ul class="team__list">
+          <li class="team__item">
             <img
-              src="./images/mark_guerrero.jpg"
+              class="team__photo"
+              src="images/mark_guerrero.jpg"
               width="264"
               alt="Mark Guerrero - Product Designer"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team__name">Mark Guerrero</h3>
+            <p class="team__position">Product Designer</p>
           </li>
-          <li>
+          <li class="team__item">
             <img
-              src="./images/tom_ford.jpg"
+              class="team__photo"
+              src="images/tom_ford.jpg"
               width="264"
               alt="Tom Ford - Frontend Developer"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team__name">Tom Ford</h3>
+            <p class="team__position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team__item">
             <img
-              src="./images/camila_garcia.jpg"
+              class="team__photo"
+              src="images/camila_garcia.jpg"
               width="264"
               alt="Camila Garcia - Marketing"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team__name">Camila Garcia</h3>
+            <p class="team__position">Marketing</p>
           </li>
-          <li>
+          <li class="team__item">
             <img
-              src="./images/daniel_wilson.jpg"
+              class="team__photo"
+              src="images/daniel_wilson.jpg"
               width="264"
               alt="Daniel Wilson - UI Designer"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team__name">Daniel Wilson</h3>
+            <p class="team__position">UI Designer</p>
           </li>
         </ul>
-      </section>
-    </main>
+      </div>
+    </section>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <!-- Portfolio -->
+    <section class="portfolio" id="portfolio">
+      <div class="container">
+        <h2 class="section-title portfolio__title">Our Portfolio</h2>
+        <ul class="portfolio__list">
+          <li class="portfolio__item">
+            <img
+              class="portfolio__image"
+              src="images/banking_app.jpg"
+              width="370"
+              alt="Banking App"
+            />
+            <h3 class="portfolio__item-title">Banking App</h3>
+            <p class="portfolio__item-text">
+              Stylish and user-friendly app design concept for mobile banking.
+            </p>
+          </li>
+          <li class="portfolio__item">
+            <img
+              class="portfolio__image"
+              src="images/cashless_payment.jpg"
+              width="370"
+              alt="Cashless Payment"
+            />
+            <h3 class="portfolio__item-title">Cashless Payment</h3>
+            <p class="portfolio__item-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+          </li>
+          <li class="portfolio__item">
+            <img
+              class="portfolio__image"
+              src="images/meditation_app.jpg"
+              width="370"
+              alt="Meditation App"
+            />
+            <h3 class="portfolio__item-title">Meditation App</h3>
+            <p class="portfolio__item-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+          </li>
+          <li class="portfolio__item">
+            <img
+              class="portfolio__image"
+              src="images/taxi_service.jpg"
+              width="370"
+              alt="Taxi Service"
+            />
+            <h3 class="portfolio__item-title">Taxi Service</h3>
+            <p class="portfolio__item-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+          </li>
+          <li class="portfolio__item">
+            <img
+              class="portfolio__image"
+              src="images/smart_illustration.jpg"
+              width="370"
+              alt="Smart Illustration"
+            />
+            <h3 class="portfolio__item-title">Smart Illustration</h3>
+            <p class="portfolio__item-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+          </li>
+          <li class="portfolio__item">
+            <img
+              class="portfolio__image"
+              src="images/online_courses.jpg"
+              width="370"
+              alt="Online Courses"
+            />
+            <h3 class="portfolio__item-title">Online Courses</h3>
+            <p class="portfolio__item-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer" id="contacts">
+      <div class="container footer__content">
+        <a class="footer__logo" href="#">WebStudio</a>
+        <p class="footer__text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
