--- a/index.html
+++ b/index.html
@@ -24,64 +24,64 @@
   <!-- Header -->
   <header class="page-header">
     <nav class="page-nav">
-      <a href="./index.html" class="logo link">Web<span class="studio-color">Studio</span></a>
-      <ul class="menu list">
+      <a href="./index.html" class="logo reset-link">Web<span class="logo__studio">Studio</span></a>
+      <ul class="nav-menu reset-list">
         <li>
-          <a class="menu-item menu-link link" href="./index.html">Studio</a>
+          <a class="nav-menu__item reset-link" href="./index.html">Studio</a>
         </li>
         <li>
-          <a class="menu-item menu-link link" href="">Portfolio</a>
+          <a class="nav-menu__item reset-link" href="">Portfolio</a>
         </li>
         <li>
-          <a class="menu-item menu-link link" href="">Contacts</a>
+          <a class="nav-menu__item reset-link" href="">Contacts</a>
         </li>
       </ul>
     </nav>
     <address class="address">
-      <ul class="list">
+      <ul class="reset-list">
         <li>
-          <a href="mailto:info@devstudio.com" class="link contact">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="reset-link contact-link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+110001111111" class="link contact">+11 (000) 111-11-11</a>
+          <a href="tel:+110001111111" class="reset-link contact-link">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </address>
   </header>
   <!-- Main -->
-  <main class="page-main">
-    <!-- Square -->
+  <main class="main-content">
+    <!-- Hero Section -->
     <section class="hero">
-      <h1 class="main-title">Effective Solutions for Your Business</h1>
-      <button type="button" class="hero-button">Order Service</button>
+      <h1 class="hero__title">Effective Solutions for Your Business</h1>
+      <button type="button" class="hero__button">Order Service</button>
     </section>
     <section>
-      <h2 class="hidden-title"></h2>
-      <ul class="list">
+      <h2 class="visually-hidden">Our Features</h2>
+      <ul class="reset-list">
         <li>
-          <h3 class="small-title">Strategy</h3>
-          <p class="small-descr">
+          <h3 class="card__title">Strategy</h3>
+          <p class="card__text">
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
         </li>
         <li>
-          <h3 class="small-title">Punctuality</h3>
-          <p class="small-descr">
+          <h3 class="card__title">Punctuality</h3>
+          <p class="card__text">
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
           </p>
         </li>
         <li>
-          <h3 class="small-title">Diligence</h3>
-          <p class="small-descr">
+          <h3 class="card__title">Diligence</h3>
+          <p class="card__text">
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
           </p>
         </li>
         <li>
-          <h3 class="small-title">Technologies</h3>
-          <p class="small-descr">
+          <h3 class="card__title">Technologies</h3>
+          <p class="card__text">
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
           </p>
@@ -89,72 +89,72 @@
       </ul>
     </section>
     <!-- Our Team -->
-    <section class="our-team">
-      <h2 class="secondary-title">Our Team</h2>
-      <ul class="list">
-        <li class="our-team-list-item">
+    <section class="team-section">
+      <h2 class="section__title">Our Team</h2>
+      <ul class="reset-list">
+        <li class="team-card">
           <img src="./images/mark_guerrero.jpg" width="264" alt="men with beard" />
-          <h3 class="small-title">Mark Guerrero</h3>
-          <p class="small-descr">Product Designer</p>
+          <h3 class="card__title">Mark Guerrero</h3>
+          <p class="card__text">Product Designer</p>
         </li>
-        <li class="our-team-list-item">
+        <li class="team-card">
           <img src="./images/tom_ford.jpg" width="264" alt="happy men" />
-          <h3 class="small-title">Tom Ford</h3>
-          <p class="small-descr">Frontend Developer</p>
+          <h3 class="card__title">Tom Ford</h3>
+          <p class="card__text">Frontend Developer</p>
         </li>
-        <li class="our-team-list-item">
+        <li class="team-card">
           <img src="./images/camila_garcia.jpg" width="264" alt="woman" />
-          <h3 class="small-title">Camila Garcia</h3>
-          <p class="small-descr">Marketing</p>
+          <h3 class="card__title">Camila Garcia</h3>
+          <p class="card__text">Marketing</p>
         </li>
-        <li class="our-team-list-item">
+        <li class="team-card">
           <img src="./images/daniel_wilson.jpg" width="264" alt="men with black hair" />
-          <h3 class="small-title">Daniel Wilson</h3>
-          <p class="small-descr">UI Designer</p>
+          <h3 class="card__title">Daniel Wilson</h3>
+          <p class="card__text">UI Designer</p>
         </li>
       </ul>
     </section>
     <section>
-      <!-- Images -->
-      <h2 class="secondary-title">Our Portfolio</h2>
-      <ul class="list">
+      <!-- Portfolio Section -->
+      <h2 class="section__title">Our Portfolio</h2>
+      <ul class="reset-list">
         <li>
           <img src="./images/banking_app.jpg" alt="Banking App Interface Concept" width="360" />
-          <h3 class="small-title">Banking App</h3>
-          <p class="small-descr">App</p>
+          <h3 class="card__title">Banking App</h3>
+          <p class="card__text">App</p>
         </li>
         <li>
           <img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" />
-          <h3 class="small-title">Cashless Payment</h3>
-          <p class="small-descr">Marketing</p>
+          <h3 class="card__title">Cashless Payment</h3>
+          <p class="card__text">Marketing</p>
         </li>
         <li>
           <img src="./images/meditation_app.jpg" alt="Meditation App" width="360" />
-          <h3 class="small-title">Meditation App</h3>
-          <p class="small-descr">App</p>
+          <h3 class="card__title">Meditation App</h3>
+          <p class="card__text">App</p>
         </li>
         <li>
           <img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" />
-          <h3 class="small-title">Taxi Service</h3>
-          <p class="small-descr">Marketing</p>
+          <h3 class="card__title">Taxi Service</h3>
+          <p class="card__text">Marketing</p>
         </li>
         <li>
           <img src="./images/screen_illustration.jpg" alt="Screen Illustrations" width="360" />
-          <h3 class="small-title">Screen Illustrations</h3>
-          <p class="small-descr">Design</p>
+          <h3 class="card__title">Screen Illustrations</h3>
+          <p class="card__text">Design</p>
         </li>
         <li>
           <img src="./images/online_courses.jpg" alt="Online Courses" width="360" />
-          <h3 class="small-title">Online Courses</h3>
-          <p class="small-descr">Marketing</p>
+          <h3 class="card__title">Online Courses</h3>
+          <p class="card__text">Marketing</p>
         </li>
       </ul>
     </section>
   </main>
   <!-- Footer -->
-  <footer class="page-footer">
-    <a href="./index.html" class="logo link">Web<span class="studio-color-dark-theme">Studio</span></a>
-    <p class="small-descr small-descr-dark-theme">
+  <footer class="footer">
+    <a href="./index.html" class="logo reset-link">Web<span class="logo__studio--light">Studio</span></a>
+    <p class="card__text card__text--light">
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
     </p>
