--- a/index.html
+++ b/index.html
@@ -93,22 +93,22 @@
       <h2 class="section__title">Our Team</h2>
       <ul class="reset-list">
         <li class="team-card">
-          <img src="./images/mark_guerrero.jpg" width="264" alt="men with beard" />
+          <img src="./images/mark_guerrero.jpg" width="264" alt="Mark Guerrero" />
           <h3 class="card__title">Mark Guerrero</h3>
           <p class="card__text">Product Designer</p>
         </li>
         <li class="team-card">
-          <img src="./images/tom_ford.jpg" width="264" alt="happy men" />
+          <img src="./images/tom_ford.jpg" width="264" alt="Tom Ford" />
           <h3 class="card__title">Tom Ford</h3>
           <p class="card__text">Frontend Developer</p>
         </li>
         <li class="team-card">
-          <img src="./images/camila_garcia.jpg" width="264" alt="woman" />
+          <img src="./images/camila_garcia.jpg" width="264" alt="Camila Garcia" />
           <h3 class="card__title">Camila Garcia</h3>
           <p class="card__text">Marketing</p>
         </li>
         <li class="team-card">
-          <img src="./images/daniel_wilson.jpg" width="264" alt="men with black hair" />
+          <img src="./images/daniel_wilson.jpg" width="264" alt="Daniel Wilson" />
           <h3 class="card__title">Daniel Wilson</h3>
           <p class="card__text">UI Designer</p>
         </li>
@@ -119,7 +119,7 @@
       <h2 class="section__title">Our Portfolio</h2>
       <ul class="reset-list">
         <li>
-          <img src="./images/banking_app.jpg" alt="Banking App Interface Concept" width="360" />
+          <img src="./images/banking_app.jpg" alt="Banking App" width="360" />
           <h3 class="card__title">Banking App</h3>
           <p class="card__text">App</p>
         </li>
